move scorem package to scorem-ipsum

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /venv/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/scorem-ipsum.iml
+/.idea/vcs.xml
+/.idea/inspectionProfiles/profiles_settings.xml
