--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ build-backend = "flit_core.buildapi"
 name = "scoremipsum"
 description = "SCOREM - generate sportsball score data for testing and demos (aka scoremipsum)"
 keywords = ["scoremipsum", "score", "sports", "sportsball", "generation"]
-version = "0.0.3"
+version = "0.0.4"
 authors = [{name = "Chuck Staples", email = "cjstaples@gmail.com"}]
 readme = "README.md"
+requires-python = ">=3.9"
 license = "MIT"
 license-files = ["LICENSE"]
 
