--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,15 @@ name = "scoremipsum"
 description = "SCOREM - generate sportsball score data for testing and demos (aka scoremipsum)"
 keywords = ["scoremipsum", "score", "sports", "sportsball", "generation"]
 version = "0.0.5"
-authors = [{name = "Chuck Staples", email = "cjstaples@gmail.com"}]
+
+authors = [
+    {name = "Chuck Staples", email = "cjstaples@gmail.com"}
+]
+maintainers = [
+  { name="Charles Staples", email="cjstaples@weaselwatch.com" },
+  { name="Jason Staples", email="js.saberx@gmail.com" },
+]
+
 readme = "README.md"
 requires-python = ">=3.9"
 license = "MIT"
